tests/baselines/reference/numericIndexerConstraint1.errors.txt
numericIndexerConstraint1.ts(3,5): error TS2322: Type 'number' is not assignable to type 'Foo'.
numericIndexerConstraint1.ts(3,19): error TS2454: Variable 'x' is used before being assigned.


==== numericIndexerConstraint1.ts (2 errors) ====
    class Foo { foo() { } }
    var x: { [index: string]: number; };
    var result: Foo = x["one"]; // error
        ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'Foo'.
                      ~
!!! error TS2454: Variable 'x' is used before being assigned.
    